# STM32F0_Example

./: .devcontainer.json  .gitignore  README.md  STM32F042G6Ux.ioc
Core/Inc/: main.h  stm32f0xx_it.h
Core/Src/: gpio.c  main.c  stm32f0xx_it.c  syscalls.c
armgcc/: .clang-format  CMakeLists.txt  CMakePresets.json  SourceFiles.cmake
